# Siksha_AI

./: .env.example  .gitignore  APP_ONLY_TECH_STACK.md  ARCHITECTURE.md  BUG_FIX_SUMMARY.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETE_STATUS.md  CURRENT_STATUS.md  DASHBOARD_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  EVERYTHING_COMPLETE.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_VERIFICATION.md  LATEST_UPDATES.md  LOCAL_OCR_GUIDE.md  NOTES_FEATURE_GUIDE.md  OCR_IMPLEMENTATION_COMPLETE.md  OCR_INDEX.md  OCR_INTEGRATION.md  OCR_QUICK_REFERENCE.md  OCR_SETUP.md  OCR_SUMMARY.md  OFFLINE_APP_FINAL_DESIGN.md  OFFLINE_ARCHITECTURE_SUMMARY.md  OFFLINE_FIRST_DESIGN.md  OFFLINE_FIRST_QUICK_START.md  OLLAMA_INTEGRATION.md  PHASE1_DASHBOARD_COMPLETE.md  PRE_DEPLOYMENT_CHECKLIST.md  PROFILE_COMPLETE.md  (+39 more)
.agent/: ONBOARDING_FIXES.md  QUICK_START_SPOTLIGHT.md  SPOTLIGHT_POSITION_FIX.md  SPOTLIGHT_TUTORIAL_GUIDE.md  TUTORIAL_TESTING_GUIDE.md
.vercel/: project.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  LlamaBridgeNative.cpp
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  dashboard.tsx  flashcards.tsx  history.tsx  notes.tsx  profile.tsx  progress.tsx  quiz.tsx  settings.tsx  tutor.tsx
backend/: .env.example  .gitignore  package-lock.json  package.json  server.js
src/components/: AuthScreen.tsx  ChatBubble.tsx  (+3 more)
(+26 files in other folders)
